# typester.dev

./: Cargo.toml  Dockerfile  LICENSE
.github/workflows/: deploy.yml  test.yml
entries/: notice.org  profile.org
entries-json/: notice.json  profile.json
entries-json/blog/: 2024-11-01_hello.json  2024-11-14_mobile-app-development-with-rust.json  2024-11-14_test.json  2024-11-15_deploy-app-to-dokku-from-github-actions.json  2024-11-16_mobile-app-core-in-rust-setup-environment.json  2024-12-01_rust-musl-cross-docker-arch.json  2025-01-29_xremap.json  2025-02-06_youtube-music-app-for-linux.json  2025-09-26_query-river-state-using-graphql.json  2026-01-11_tag-based-workspace-management-with-aerospace.json  2026-01-14_pomodoro-timer-with-orgmode.json  2026-01-18_yashiki-window-manager.json  2026-02-05_app-launcher-for-yashiki.json
entries/blog/: 2024-11-01_hello.org  2024-11-13_test-entry.org  2024-11-14_mobile-app-development-with-rust.org  2024-11-14_test.org  2024-11-15_deploy-app-to-dokku-from-github-actions.org  2024-11-16_mobile-app-core-in-rust-setup-environment.org  2024-12-01_rust-musl-cross-docker-arch.org  2025-01-29_xremap.org  2025-02-06_youtube-music-app-for-linux.org  2025-09-26_query-river-state-using-graphql.org  2026-01-11_tag-based-workspace-management-with-aerospace.org  2026-01-14_pomodoro-timer-with-orgmode.org  2026-01-18_yashiki-window-manager.org  2026-02-05_app-launcher-for-yashiki.org
public/: cv.html
public/.debug/: test.html
sass/: _base.scss  _code.scss  _variables.scss  cv.scss  layout.scss  main.scss
src/: entry_loader.rs  main.rs
(+8 files in other folders)
