[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
maud = { version = "0.26.0", features = ["axum"] }
regex = "1.11.1"
reqwest = "0.12.9"
rss = "2.0.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
